# web-lifter

./: .gitignore  Cargo.toml  LICENSE  README.md  web-lifter.rtf
files/: add_exercise.html  blocks.js  checkboxes.js  current.js  discrete-modal.html  discrete.js  durations.js  edit_any_weight.html  edit_current_set.html  edit_discrete_weights.html  edit_durations.html  edit_durs_record.html  edit_exercises.html  edit_fixed_reps.html  edit_formal_name.html  edit_name.html  edit_note.html  edit_reps_record.html  edit_rest.html  edit_var_reps.html  edit_var_sets.html  edit_weight.html  editable-list.js  exercise.html  exercise.js  exercises.js  formal_name.js  jsconfig.json  list.js  overview.html  plates-modal.html  plates.js  program.html  rest.js  styles.css  weight_sets.js  workout.html
src/: app_state.rs  days.rs  default.rs  exercise.rs  exercises.rs  history.rs  main.rs  notes.rs  pages.rs  persist.rs  program.rs  weights.rs  workout.rs
src/exercise/: durations.rs  durations_exercise.rs  exercise_instance.rs  exercise_interfaces.rs  exercise_objects.rs  fixed_reps.rs  fixed_reps_exercise.rs  formal_name.rs  iformal_name.rs  isummary.rs  last_rest.rs  rest.rs  target_secs.rs  variable_reps_exercise.rs  variable_sets_exercise.rs  workout_interfaces.rs  workout_objects.rs
src/pages/: app_state.rs  edit_add_exercise.rs  edit_add_exercise_page.rs  edit_any_weight.rs  edit_block.rs  edit_blocks.rs  edit_current_set.rs  edit_current_set_page.rs  edit_discrete_set.rs  edit_discrete_weight.rs  edit_durations.rs  edit_durations_page.rs  edit_durs_record.rs  edit_durs_record_page.rs  edit_exercises.rs  edit_exercises_page.rs  edit_fixed_reps.rs  edit_fixed_reps_page.rs  edit_formal_name.rs  edit_formal_name_page.rs  edit_name.rs  edit_name_page.rs  edit_note.rs  edit_note_page.rs  edit_plate_set.rs  edit_reps_record.rs  edit_reps_record_page.rs  edit_rest.rs  edit_rest_page.rs  edit_schedule.rs  edit_set_week.rs  edit_var_reps.rs  edit_var_reps_page.rs  edit_var_sets.rs  edit_var_sets_page.rs  edit_weight.rs  edit_weight_page.rs  edit_weight_sets.rs  edit_workouts.rs  editor_builder.rs  (+9 more)
src/pages/editors/: edit_add_exercise.rs  edit_any_weight.rs  edit_block.rs  edit_blocks.rs  edit_current_set.rs  edit_discrete_set.rs  edit_durations.rs  edit_durs_record.rs  edit_exercises.rs  edit_fixed_reps.rs  edit_formal_name.rs  edit_name.rs  edit_note.rs  edit_notes.rs  edit_plate_set.rs  edit_rest.rs  edit_schedule.rs  edit_set_week.rs  edit_var_reps.rs  edit_var_sets.rs  edit_weight.rs  edit_weight_sets.rs  edit_workouts.rs
src/pages/views/: exercise_page.rs  exercise_post.rs  overview_page.rs  program_page.rs  workout_page.rs
