[package]
name = "web-lifter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"                                                      # error handling
axum = { version = "0.7", features = ["form", "query"] }            # web backend
chrono = { version = "0.4", features = ["serde"] }                  # date and time
dirs = "5.0"                                                        # system paths
handlebars = "5.1"                                                  # template implementation
html_tag = "0.1"                                                    # build HTML
markdown = "0.3"                                                    # markdown to html
serde = { version = "1.0", features = ["derive"] }                  # serialization
serde_json = { version = "1.0", features = ["std"] }                # json serialization
tokio = { version = "1.0", features = ["full"] }                    # asynchronous runtime
tower = { version = "0.4", features = ["util"] }                    # web server components
tower-http = { version = "0.5", features = ["add-extension"] }      # http components
tracing = "0.1"                                                     # structured logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # logging
url-escape = "0.1"                                                  # escape URLs

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] } # http requests
spellbound = "0.1"                                      # spell checker
threadpool = "1.8"                                      # thread pool
